This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: A missing "goto" in the _ssl module!
Type: behavior Stage: resolved
Components: Extension Modules, SSL Versions: Python 3.10, Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: christian.heimes Nosy List: ZackerySpytz, christian.heimes, miss-islington
Priority: normal Keywords: patch

Created on 2020-10-25 04:51 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 22959 merged ZackerySpytz, 2020-10-25 04:53
PR 22974 merged miss-islington, 2020-10-25 18:02
PR 22975 merged miss-islington, 2020-10-25 18:02
Messages (5)
msg379562 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2020-10-25 04:51
In the _ssl_configure_hostname() function, there's a missing "goto error;" if
SSL_set_tlsext_host_name() fails.
msg379593 - (view) Author: miss-islington (miss-islington) Date: 2020-10-25 18:02
New changeset c32f2976b8f4034724c3270397aa16f38daf470f by Zackery Spytz in branch 'master':
bpo-42144: Add a missing "goto error;" in the _ssl module (GH-22959)
https://github.com/python/cpython/commit/c32f2976b8f4034724c3270397aa16f38daf470f
msg379594 - (view) Author: miss-islington (miss-islington) Date: 2020-10-25 18:21
New changeset 8e980ecfb7b42063ed41d665288aff69f0ed7fdc by Miss Skeleton (bot) in branch '3.8':
bpo-42144: Add a missing "goto error;" in the _ssl module (GH-22959)
https://github.com/python/cpython/commit/8e980ecfb7b42063ed41d665288aff69f0ed7fdc
msg379596 - (view) Author: miss-islington (miss-islington) Date: 2020-10-25 18:23
New changeset 83c86cf54b36a7325f615f5adf22b28e48f0e72d by Miss Skeleton (bot) in branch '3.9':
bpo-42144: Add a missing "goto error;" in the _ssl module (GH-22959)
https://github.com/python/cpython/commit/83c86cf54b36a7325f615f5adf22b28e48f0e72d
msg379606 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2020-10-25 20:38
Thanks, excellent finding.
History
Date User Action Args
2022-04-11 14:59:37adminsetgithub: 86310
2020-10-25 20:38:29christian.heimessetstatus: open -> closed
type: behavior
messages: + msg379606

resolution: fixed
stage: patch review -> resolved
2020-10-25 18:23:16miss-islingtonsetmessages: + msg379596
2020-10-25 18:21:43miss-islingtonsetmessages: + msg379594
2020-10-25 18:02:53miss-islingtonsetpull_requests: + pull_request21892
2020-10-25 18:02:46miss-islingtonsetpull_requests: + pull_request21891
2020-10-25 18:02:38miss-islingtonsetnosy: + miss-islington
messages: + msg379593
2020-10-25 04:53:35ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request21876
2020-10-25 04:51:47ZackerySpytzcreate