bpo-42144: Add a missing "goto error;" in the _ssl module (GH-22959)

(cherry picked from commit c32f2976b8f4034724c3270397aa16f38daf470f)

Co-authored-by: Zackery Spytz <zspytz@gmail.com>